# iceberg_rust_ffi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_BUILD.md  build.rs  cbindgen.toml  integration_test  run_integration_test.sh  run_with_env.sh
.github/workflows/: CI.yml
assets/: .gitignore
assets/minio/data/.minio.sys/: format.json
assets/rest/: iceberg_catalog.db
assets/tpch/tpch.sf01/customer/data/: data_customer-00000.parquet
assets/tpch/tpch.sf01/customer/metadata/: 00000-2578f142-3c7f-475c-b25a-273258043110.metadata.json  00001-f6c417c4-ffac-458f-af4f-8c8cb7f3593e.metadata.json  0198f4dc-90f3-7d33-94ac-74a884373c2b-m0.avro  snap-4562860087890220827-0-0198f4dc-90f3-7d33-94ac-74a884373c2b.avro
assets/tpch/tpch.sf01/lineitem/metadata/: 00000-63fadc2e-edca-4b7e-8f00-cd3c45bdb04c.metadata.json  00001-82af8890-f380-45e9-a50a-8777fdd55e61.metadata.json  0198f4dc-8e6b-7700-8b9d-17d0fa781e72-m0.avro  snap-4512119802503495008-0-0198f4dc-8e6b-7700-8b9d-17d0fa781e72.avro
assets/tpch/tpch.sf01/nation/data/: data_nation-00000.parquet
assets/tpch/tpch.sf01/nation/metadata/: 00000-972d9384-458d-438a-b07d-133d41334b1d.metadata.json  00001-4f9722c5-8764-4988-8063-874c3d453268.metadata.json  0198f4dc-92b4-7292-80b2-ebd7910815e2-m0.avro  snap-2687134327738938269-0-0198f4dc-92b4-7292-80b2-ebd7910815e2.avro
assets/tpch/tpch.sf01/orders/metadata/: 00000-d3a117a4-5619-4cc0-ac57-8d45d5916b1e.metadata.json  (+3 more)
docker/: docker-compose.yml
include/: iceberg_c_api.h  iceberg_rust_ffi.h
src/: lib.rs
tests/: integration_test  integration_test.c
(+46 files in other folders)
