[package]
name = "iceberg_rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "iceberg_rust_ffi"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.26"

[dependencies]
iceberg = "0.6.0"
object_store_ffi = { path = "../object_store_ffi", default-features = false }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
libc = "0.2"
anyhow = "1.0"
arrow-array = "55.2.0"
arrow-ipc = "55.2.0"
tracing-subscriber = "0.3"
tracing = "0.1"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.0"
